# xhs-dl

./: .gitignore  CHANGELOG.md  LICENSE  PORTABLE-GUIDE.md  README.md  V2去水印任务交接文档.md  build-portable.ps1  install-engine.bat  pyproject.toml  setup-v2.ps1  一键安装V2.bat  三端交付说明.md  交接文档.md  使用手册.md  启动Web版.bat  启动无水印版.bat  安全与注意事项.md  开发手册.md  设计与使用说明.md
.github/workflows/: ios-build.yml
android/: build.gradle  settings.gradle
android/app/: build.gradle  proguard-rules.pro
ios/: IOS-ACCEPTANCE.md  README.md  project.yml
ios/RedSweetPotatoDownload/: Info.plist
ios/RedSweetPotatoDownload/App/: RedSweetPotatoDownloadApp.swift
ios/RedSweetPotatoDownload/Models/: NoteData.swift
ios/RedSweetPotatoDownload/Services/: DownloadStore.swift  HistoryStore.swift  UpdateChecker.swift  XhsParser.swift
ios/RedSweetPotatoDownload/Theme/: AppTheme.swift
ios/RedSweetPotatoDownload/ViewModels/: DownloadViewModel.swift
ios/RedSweetPotatoDownload/Views/: DirectoryPicker.swift  RootView.swift  (+1 more)
ios/RedSweetPotatoDownloadLegacy/: AppDelegate.swift  DownloadStore.swift  MainViewController.swift  Models.swift  UpdateChecker.swift  XhsParser.swift
openclaw+feishu/: AGENTS.md  GROUPS.md  INDEX.md  MEMORY_LOG.md  PROJECT.md  SOUL.md  USER.md
skills/xhs-download/: SKILL.md
templates/: local-cli.json
tests/: test_basic.py  test_ios_legacy_compatibility.py  test_ios_release_identity.py
xhs_dl/: __init__.py  cli.py  engine_bridge.py  portable.py  storage.py
xhs_dl/core/: downloader.py  models.py  v2_downloader.py
xhs_dl/desktop/: __init__.py  app.py
xhs_dl/web/: app.py
(+21 files in other folders)
